--- a/Release/Source/Databases/The Guide/functions/functions.csproj
+++ b/Release/Source/Databases/The Guide/functions/functions.csproj
@@ -38,8 +38,6 @@
   <ItemGroup>
     <None Include="udf_calcdistance.sql" />
     <None Include="udf_checkerr.sql" />
-    <None Include="udf_decryptemailaddress.sql" />
-    <None Include="udf_encryptemailaddress.sql" />
     <None Include="udf_generateh2g2id.sql" />
     <None Include="udf_getdnauseridfromloginname.sql" />
     <None Include="udf_GetGuideEntryType.sql" />
@@ -48,7 +46,6 @@
     <None Include="udf_GetSiteOptionSetting.sql" />
     <None Include="udf_GetVisibleSites.sql" />
     <None Include="udf_getusersiteidpairs.sql" />
-    <None Include="udf_hashemailaddress.sql" />
     <None Include="udf_HasUserAcceptedTermsAndConditionsOfSite.sql" />
     <None Include="udf_IsUserAcceptingSubscriptions.sql" />
     <None Include="udf_isusermemberofgroup.sql" />
@@ -66,10 +63,15 @@
     <None Include="udf_getthreadentryfulltextcatalogname.sql" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="udf_decryptemailaddress.sql" />
+    <None Include="udf_decrypttext.sql" />
+    <None Include="udf_encryptemailaddress.sql" />
+    <None Include="udf_encrypttext.sql" />
     <None Include="udf_GetUsername.sql" />
     <None Include="udf_dateonly.sql">
       <SubType>Component</SubType>
     </None>
+    <None Include="udf_hashemailaddress.sql" />
   </ItemGroup>
   <!--<Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />-->
 </Project>
