--- a/Main/Tests/Acceptance Tests/Comments.AcceptanceTests/Comments.AcceptanceTests.csproj
+++ b/Main/Tests/Acceptance Tests/Comments.AcceptanceTests/Comments.AcceptanceTests.csproj
@@ -54,6 +54,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CommentForumListPage.ContactForms.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>CommentForumListPage.ContactForms.feature</DependentUpon>
+    </Compile>
     <Compile Include="Comments.AnonymousPosting.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -76,6 +81,7 @@
     </Compile>
     <Compile Include="StepDefinitions\AdminConsoleAuthorization.cs" />
     <Compile Include="StepDefinitions\AnonymousCommentPosting.cs" />
+    <Compile Include="StepDefinitions\CommentForumListPage.cs" />
     <Compile Include="StepDefinitions\CreateContactDetail.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="StepDefinitions\CreateForum.cs" />
@@ -95,6 +101,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="CommentForumListPage.ContactForms.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>CommentForumListPage.ContactForms.feature.cs</LastGenOutput>
+    </None>
     <None Include="Comments.AnonymousPosting.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>Comments.AnonymousPosting.feature.cs</LastGenOutput>
