Moved new contact contracts into their own files. Added new contracts to project. Refactored the email body/subject code for contact messages.

--- a/Main/Source/Shared/BBC.Dna.Api/BBC.Dna.Api.csproj
+++ b/Main/Source/Shared/BBC.Dna.Api/BBC.Dna.Api.csproj
@@ -108,6 +108,8 @@
     <Compile Include="Contracts\CommentsList.Contract.cs" />
     <Compile Include="Contracts\CommentsSummary.Contract.cs" />
     <Compile Include="Contracts\ContactForm.Contract.cs" />
+    <Compile Include="Contracts\ContactFormContactDetailList.Contract.cs" />
+    <Compile Include="Contracts\ContactFormContactDetails.Contract.cs" />
     <Compile Include="Contracts\ContactFormMessage.Contract.cs" />
     <Compile Include="Contracts\ErrorData.Contract.cs" />
     <Compile Include="Contracts\Forum.Contract.cs" />
@@ -134,6 +136,7 @@
     <Compile Include="Comments.cs" />
     <Compile Include="ApiException.cs" />
     <Compile Include="EditorPicks.cs" />
+    <Compile Include="FailedEmail.cs" />
     <Compile Include="filterByEnum.cs" />
     <Compile Include="Reviews.cs" />
     <Compile Include="PostStyle.cs" />
