--- a/Main/Source/Shared/BBC.Dna.Api.Tests/BBC.Dna.Api.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Api.Tests/BBC.Dna.Api.Tests.csproj
@@ -118,6 +118,9 @@
       <Name>Microsoft.ServiceModel.Web %28Source\Shared\Microsoft.ServiceModel.Web\Microsoft.ServiceModel.Web%29</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Shadow Include="Test References\BBC.Dna.Api.accessor" />
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
