--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1289,6 +1289,7 @@
     <None Include="createretweetinfoforpremodpostings.sql" />
     <None Include="CreateTweetInfoForComment.sql" />
     <None Include="CreateTweetInfoForPremodPostings.sql" />
+    <None Include="createworldservicesite.sql" />
     <None Include="doestwitteruserexists.sql" />
     <None Include="getcontactformdetailfromformid.sql" />
     <None Include="getcontactformslist.sql" />
