SPS-1640 : Port the C++ site options page to the .NET project * Checking in all my changes as I have a stable build. The system is still setup to use the old C++, but you can test if you run the filter.reg and type siteoptions-n

--- a/Main/Source/BBC.Dna/BBC.DNA.csproj
+++ b/Main/Source/BBC.Dna/BBC.DNA.csproj
@@ -127,6 +127,7 @@
     <Compile Include="ContentSignifAdminBuilder.cs" />
     <Compile Include="ContentSignifSettings.cs" />
     <Compile Include="ContentSignifSettingsParameters.cs" />
+    <Compile Include="SiteOptionsPageBuilder.cs" />
     <Compile Include="TwitterProfile.cs" />
     <Compile Include="TwitterProfileList.cs" />
     <Compile Include="UserReputationReportBuilder.cs" />
