--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1287,6 +1287,7 @@
     <None Include="contactformpostsreadbyforumid.sql" />
     <None Include="createretweetinfoforcomment.sql" />
     <None Include="createretweetinfoforpremodpostings.sql" />
+    <None Include="createsitenotes.sql" />
     <None Include="CreateTweetInfoForComment.sql" />
     <None Include="CreateTweetInfoForPremodPostings.sql" />
     <None Include="createworldservicesite.sql" />
