--- a/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
+++ b/Main/Source/Web Services/BBC.DNA.Dnapages/BBC.DNA.Dnapages.csproj
@@ -129,6 +129,13 @@
     <Compile Include="ContentSignifPage.aspx.designer.cs">
       <DependentUpon>ContentSignifPage.aspx</DependentUpon>
     </Compile>
+    <Compile Include="SiteOptions.aspx.cs">
+      <DependentUpon>SiteOptions.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="SiteOptions.aspx.designer.cs">
+      <DependentUpon>SiteOptions.aspx</DependentUpon>
+    </Compile>
     <Compile Include="TwitterProfilePage.aspx.cs">
       <DependentUpon>TwitterProfilePage.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -961,6 +968,7 @@
     <Content Include="App_Data\forum scheduled closed.xml" />
     <Content Include="App_Data\test_template6music.htm" />
     <Content Include="App_Data\test_templateBlast.htm" />
+    <Content Include="SiteOptions.aspx" />
     <Content Include="TwitterProfilePage.aspx" />
     <Content Include="TwitterProfileListPage.aspx" />
     <Content Include="UserReputationReport.aspx" />
