Most recently commented comment forum & most commented comment forum functionality related code check in. Service layer code may be tweaked when the service layer as a whole is reviewed and refactored.

--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1292,6 +1292,7 @@
     <None Include="CreateTweetInfoForPremodPostings.sql" />
     <None Include="createworldservicesite.sql" />
     <None Include="doestwitteruserexists.sql" />
+    <None Include="getcommentforumlistmostrecentlycommented.sql" />
     <None Include="getcontactformdetailfromformid.sql" />
     <None Include="getcontactformslist.sql" />
     <None Include="GetCommentIdFromTweetId.sql" />
@@ -1304,6 +1305,7 @@
     <None Include="ApplyUserReputation.sql" />
     <None Include="ApplyUserReputations.sql" />
     <None Include="getcommentforumdetailsbyforumid.sql" />
+    <None Include="getmostcommentedcommentforumlist.sql" />
     <None Include="getnewssitestats.sql" />
     <None Include="gettermsbyforumid.sql" />
     <None Include="gettermsbyforumidfromforums.sql" />
@@ -1315,6 +1317,7 @@
     <None Include="processexpiredpremodpostings.sql" />
     <None Include="SearchForTwitterUserViaScreenName.sql" />
     <None Include="setcommentforumascontactform.sql" />
+    <None Include="updatemostcommentedforums.sql" />
     <None Include="updatetrackedmemberformodclass.sql" />
     <None Include="GetUserReputation.sql" />
     <None Include="updatetrackedmemberlistinternal.sql" />
