--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1275,6 +1275,7 @@
     <None Include="commentreplycreate.sql" />
     <None Include="commentsreadbyforumids.sql" />
     <None Include="commentsreadbyforumidseditorpicksfilter.sql" />
+    <None Include="commentsreadbyforumid_xdm.sql" />
     <None Include="commentsreadbythreadid.sql" />
     <None Include="commentthreadcreate.sql" />
     <None Include="CommentForumUpdate.sql" />
@@ -1313,6 +1314,7 @@
     <None Include="getuserstatus.sql" />
     <None Include="getBBCDivisions.sql" />
     <None Include="GetUserReputationList.sql" />
+    <None Include="insertdistressmessage.sql" />
     <None Include="processexpiredpremodpostings.sql" />
     <None Include="SearchForTwitterUserViaScreenName.sql" />
     <None Include="setcommentforumascontactform.sql" />
