https://jira.dev.bbc.co.uk/browse/SPS-1786 - Code changes so that we have a siteoption that states that we want to send emails with the json object from the contact forms instead of trying to format it for humans. This is inline the new Atos/WatchDog email ingest system changes.

--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1298,6 +1298,7 @@
     <None Include="GetCommentIdFromTweetId.sql" />
     <None Include="getcommentratingstats.sql" />
     <None Include="getcontactformthreads.sql" />
+    <None Include="getemailbatchtosend.sql" />
     <None Include="getmoderatingclassbyuser.sql" />
     <None Include="createnewuserfromtwitteruserid.sql" />
     <None Include="getalluserpostingstats4.sql" />
@@ -1316,6 +1317,7 @@
     <None Include="GetUserReputationList.sql" />
     <None Include="insertdistressmessage.sql" />
     <None Include="processexpiredpremodpostings.sql" />
+    <None Include="queueemail.sql" />
     <None Include="SearchForTwitterUserViaScreenName.sql" />
     <None Include="setcommentforumascontactform.sql" />
     <None Include="updatemostcommentedforums.sql" />
