--- a/Main/Source/Shared/BBC.Dna.Data/BBC.Dna.Data.csproj
+++ b/Main/Source/Shared/BBC.Dna.Data/BBC.Dna.Data.csproj
@@ -101,6 +101,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DatabaseEmailQueue.cs" />
     <Compile Include="DnaDataReaderCreator.cs" />
     <Compile Include="EventItemTypes.cs" />
     <Compile Include="EventTypes.cs" />
