--- a/Release/Source/Databases/The Guide/TheGuide.Database.UnitTests/TheGuide.Database.UnitTests.csproj
+++ b/Release/Source/Databases/The Guide/TheGuide.Database.UnitTests/TheGuide.Database.UnitTests.csproj
@@ -49,6 +49,7 @@
     <Compile Include="GetUserReputationListTests.cs" />
     <Compile Include="GetUserReputationTests.cs" />
     <Compile Include="EmailEncryptionTests.cs" />
+    <Compile Include="ThreadModAwatingEmailVerificationTests.cs" />
     <Compile Include="verifyuseragainstbannedipaddressTests.cs" />
     <Compile Include="updatetrackedmemberlistTests.cs" />
     <Compile Include="IDnaDataReaderExtensions.cs" />
