--- a/Main/Source/Shared/BBC.Dna.Users.Tests/BBC.Dna.Users.Tests.csproj
+++ b/Main/Source/Shared/BBC.Dna.Users.Tests/BBC.Dna.Users.Tests.csproj
@@ -56,6 +56,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TestUserAccountCheckTests.cs" />
     <Compile Include="UserGroupsTests.cs" />
     <Compile Include="UserTests.cs" />
   </ItemGroup>
