Checking in code to fix the massive speed issues with the term filter admin pages. Created a new stored procedure to just get the details for a single term instead of getting all 78000 and then reducing it down to a list of 40! Removed the need to update the term if it isn't different to the one already in the database. Reduces the 40 calls to add and get all terms for mod class per term! This code is in serious need of refactoring as it's doing far too much for simple operations.

--- a/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
+++ b/Main/Source/Databases/The Guide/storedprocedures/storedprocedures.csproj
@@ -1308,6 +1308,7 @@
     <None Include="getcommentforumdetailsbyforumid.sql" />
     <None Include="getmostcommentedcommentforumlist.sql" />
     <None Include="getnewssitestats.sql" />
+    <None Include="GetTermDetailsForAllModClasses.sql" />
     <None Include="gettermsbyforumid.sql" />
     <None Include="gettermsbyforumidfromforums.sql" />
     <None Include="gettermsbymodidfromthreadmod.sql" />
