SPS-2381 : Checking in updates to the DnaEventService that adds the new DatabaseEmailProcessor. This processor is responsible for picking up emails in the database and sending them on.

--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
@@ -113,7 +113,7 @@
     </loggingConfiguration>
     <connectionStrings>
         <add name="DnaEventProcessorService.Properties.Settings.ConnectionString_TheGuide"
-            connectionString="Data Source=.;Initial Catalog=theGuide;Integrated Security=True;Application Name=DnaEventProcessorService"
+            connectionString="database=theguide; server=.; user id=sa; password=sapassword; pooling=false"
             providerName="System.Data.SqlClient" />
         <add name="DnaEventProcessorService.Properties.Settings.ConnectionString_RiskMod"
             connectionString="Data Source=.;Initial Catalog=RiskMod;Integrated Security=True;Application Name=DnaEventProcessorService" />
@@ -167,7 +167,7 @@
                 <value>32</value>
             </setting>
             <setting name="DatabaseEmailProcessor_Interval" serializeAs="String">
-                <value>5000</value>
+                <value>20000</value>
             </setting>
             <setting name="DatabaseEmaiProcessor_NumThreads" serializeAs="String">
                 <value>1</value>
@@ -180,7 +180,7 @@
                 <value>False</value>
             </setting>
             <setting name="BIEventsOn" serializeAs="String">
-                <value>True</value>
+                <value>False</value>
             </setting>
             <setting name="DatabaseEmailsOn" serializeAs="String">
                 <value>True</value>
