--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/Properties/Settings.settings
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/Properties/Settings.settings
@@ -11,10 +11,10 @@
     <Setting Name="ConnectionString_TheGuide" Type="(Connection string)" Scope="Application">
       <DesignTimeValue Profile="(Default)">&lt;?xml version="1.0" encoding="utf-16"?&gt;
 &lt;SerializableConnectionString xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:xsd="http://www.w3.org/2001/XMLSchema"&gt;
-  &lt;ConnectionString&gt;Data Source=.;Initial Catalog=theGuide;Integrated Security=True;Application Name=DnaEventProcessorService&lt;/ConnectionString&gt;
+  &lt;ConnectionString&gt;database=theguide; server=.; user id=sa; password=sapassword; pooling=false&lt;/ConnectionString&gt;
   &lt;ProviderName&gt;System.Data.SqlClient&lt;/ProviderName&gt;
 &lt;/SerializableConnectionString&gt;</DesignTimeValue>
-      <Value Profile="(Default)">Data Source=.;Initial Catalog=theGuide;Integrated Security=True;Application Name=DnaEventProcessorService</Value>
+      <Value Profile="(Default)">database=theguide; server=.; user id=sa; password=sapassword; pooling=false</Value>
     </Setting>
     <Setting Name="snesBaseUri" Type="(Web Service URL)" Scope="Application">
       <Value Profile="(Default)">http://localhost</Value>
@@ -54,7 +54,7 @@
       <Value Profile="(Default)">32</Value>
     </Setting>
     <Setting Name="DatabaseEmailProcessor_Interval" Type="System.Int32" Scope="Application">
-      <Value Profile="(Default)">5000</Value>
+      <Value Profile="(Default)">20000</Value>
     </Setting>
     <Setting Name="DatabaseEmaiProcessor_NumThreads" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">1</Value>
@@ -66,7 +66,7 @@
       <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="BIEventsOn" Type="System.Boolean" Scope="Application">
-      <Value Profile="(Default)">True</Value>
+      <Value Profile="(Default)">False</Value>
     </Setting>
     <Setting Name="DatabaseEmailsOn" Type="System.Boolean" Scope="Application">
       <Value Profile="(Default)">True</Value>
