--- a/Main/Source/Windows Services/DnaEventsService/DnaEventService.Common/DnaEventService.Common.csproj
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventService.Common/DnaEventService.Common.csproj
@@ -89,9 +89,11 @@
     <Compile Include="DnaHttpClient.cs" />
     <Compile Include="DnaHttpClientCreator.cs" />
     <Compile Include="DnaLogger.cs" />
+    <Compile Include="DnaSmtpClient.cs" />
     <Compile Include="IDnaHttpClient.cs" />
     <Compile Include="IDnaHttpClientCreator.cs" />
     <Compile Include="IDnaLogger.cs" />
+    <Compile Include="IDnaSmtpClient.cs" />
     <Compile Include="LogUtility.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="X509CertificateLoader.cs" />
