https://jira.dev.bbc.co.uk/browse/SPS-2602 - LIVE DNA platform issues in the early hours
- Added new code that checks the UserAgent string, and then throws a 403 if it's one we have marked as being banned. This is done by adding a partial string of the agent you want to block in the new <BANNEDUSERAGENTS> Ripley.xmlconf file. You can add more than one by using the | seperator. e.g. <BANNEDUSERAGENTS>bingbot|googlebot</BANNEDUSERAGENTS>

- New tests added

--- a/Main/Tests/Legacy Tests/Tests/Tests.csproj
+++ b/Main/Tests/Legacy Tests/Tests/Tests.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Dna.Sites\SiteOptionListTests.cs" />
     <Compile Include="Dna.Sites\SiteOptionTests.cs" />
     <Compile Include="Dna.Sites\SiteTests.cs" />
+    <Compile Include="DnaBasePageTests.cs" />
     <Compile Include="MessageBoardStatisticsTests.cs" />
     <Compile Include="ModerationHistoryTests.cs" />
     <Compile Include="ModerationReasonsTests.cs" />
