SPS-3054 : Updating the rating up/down api to return the negative and positive values along with the overall rating. V1 of the API still works in the same way as before, the V2 now returns a JSON response with the required values.

--- a/Main/Source/Shared/BBC.Dna.Api/BBC.Dna.Api.csproj
+++ b/Main/Source/Shared/BBC.Dna.Api/BBC.Dna.Api.csproj
@@ -157,6 +157,7 @@
   <ItemGroup>
     <None Include="BBC.Dna.snk" />
     <Compile Include="Contracts\ConversationStatus.Contracts.cs" />
+    <Compile Include="Contracts\NeroRatingInfo.cs" />
     <Compile Include="Repositories\ICommentForumRepository.cs" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
