Change the DNAEmailEvent service to remove the sensitive data once the email is sent of if a permanent failure occur.

--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
@@ -191,6 +191,10 @@
             <setting name="DatabaseEmailProcessor_MaxRetryAttempts" serializeAs="String">
                 <value>3</value>
             </setting>
+            <setting name="DatabaseEmailProcessor_PersistentErrorMessageSnippet"
+                serializeAs="String">
+                <value>service not available#remote name could not be resolved</value>
+            </setting>
         </DnaEventProcessorService.Properties.Settings>
         <!--<SNeSEventProcessor.Properties.Settings>
       <setting name="activityProcessingPeriod" serializeAs="String">
