adding the error message snippet.

--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/App.config
@@ -193,7 +193,7 @@
             </setting>
             <setting name="DatabaseEmailProcessor_PersistentErrorMessageSnippet"
                 serializeAs="String">
-                <value>service not available#remote name could not be resolved</value>
+                <value>service not available#remote name could not be resolved#Unable to connect to the remote server</value>
             </setting>
         </DnaEventProcessorService.Properties.Settings>
         <!--<SNeSEventProcessor.Properties.Settings>
