--- a/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/Properties/Settings.settings
+++ b/Main/Source/Windows Services/DnaEventsService/DnaEventProcessorService/Properties/Settings.settings
@@ -78,7 +78,7 @@
       <Value Profile="(Default)">3</Value>
     </Setting>
     <Setting Name="DatabaseEmailProcessor_PersistentErrorMessageSnippet" Type="System.String" Scope="Application">
-      <Value Profile="(Default)">service not available#remote name could not be resolved</Value>
+      <Value Profile="(Default)">service not available#remote name could not be resolved#Unable to connect to the remote server</Value>
     </Setting>
   </Settings>
 </SettingsFile>
