Updated all .net status pages to use unified/common aspx/cs files

--- a/Main/Source/Shared/BBC.Dna.Common/BBC.Dna.Common.csproj
+++ b/Main/Source/Shared/BBC.Dna.Common/BBC.Dna.Common.csproj
@@ -59,6 +59,7 @@
     <Reference Include="System.Runtime.Serialization">
       <RequiredTargetFramework>3.0</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
@@ -77,6 +78,7 @@
     <Compile Include="SignalBase.cs" />
     <Compile Include="SignalStatus.cs" />
     <Compile Include="sortingEnum.cs" />
+    <Compile Include="StatusUI.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\BBC.Dna.Data\BBC.Dna.Data.csproj">
